Update swagger.yml, add option for graceful shutdown, add flags
Shutsdown server following a wait timeout after a SIGINT
Also add cli flags for service account json file, port and wait interval.
