# gohandlers/go/api_need.go
@@ -1,3 +1,4 @@
+// Package swagger ...
 /*
  * Share my Cart
  *
@@ -13,41 +14,49 @@ import (
 	"net/http"
 )
 
+// AddNeedList adds a needs list
 func (f *Firebase) AddNeedList(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json; charset=UTF-8")
 	w.WriteHeader(http.StatusOK)
 }
 
+// GetNeedLists gets the need list
 func (f *Firebase) GetNeedLists(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json; charset=UTF-8")
 	w.WriteHeader(http.StatusOK)
 }
 
+// GetNeeds retrieves all items which are needed to be supplied
 func (f *Firebase) GetNeeds(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json; charset=UTF-8")
 	w.WriteHeader(http.StatusOK)
 }
 
+// DeleteNeeds removes all the needed items
 func (f *Firebase) DeleteNeeds(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json; charset=UTF-8")
 	w.WriteHeader(http.StatusOK)
 }
 
+// AddNeededItem adds a needed item
 func (f *Firebase) AddNeededItem(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json; charset=UTF-8")
 	w.WriteHeader(http.StatusOK)
 }
 
+// AddNeededItemToShoppingListItem adds a needed item similar like one which already exists on another shopping list
 func (f *Firebase) AddNeededItemToShoppingListItem(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json; charset=UTF-8")
 	w.WriteHeader(http.StatusOK)
 }
 
+// DeleteNeededItem deletes an existing needed item
 func (f *Firebase) DeleteNeededItem(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json; charset=UTF-8")
 	w.WriteHeader(http.StatusOK)
 }
 
+// UpdateNeededItem updates an existing needed item
 func (f *Firebase) UpdateNeededItem(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json; charset=UTF-8")
 	w.WriteHeader(http.StatusOK)
